tried to fix background being zoomed in on mobile, also altered animations on projects to be less overwhelming

--- a/src/app/components/project.module.scss
+++ b/src/app/components/project.module.scss
@@ -37,6 +37,7 @@
 
     .line {
         border-color: #25EFA6;
+        width: 100%;
     }
 
     .links {
