--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,6 @@
 .main {
     background-image: url(/images/background-img.jpg);
     background-position: center;
-    background-size: cover;
+    background-size:contain;
     background-attachment: fixed;
 }
